Fix: overflow winnerUi players

--- a/styles/winnerScreen.css
+++ b/styles/winnerScreen.css
@@ -79,6 +79,7 @@ main {
 
     ul {
         padding: 0;
+        display: flex;
 
         li {
             list-style: none;
